
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-03-14 Christophe Demko <chdemko@gmail.com>
	* src/lattice/ImplicationalSystem.java
	* test/lattice/ArrowRelationTest.java
	* test/lattice/BijectiveComponentsTest.java
	* test/lattice/ImplicationalSystemTest.java
	* src/lattice/ImplicationalSystem.iuml
		+ Add uml graph for Implicationalsystem
		^ Correct some minor errors in test

2014-03-11 Jean-François Viaud <jviaud@univ-lr.fr>
	* build.xml
	* src/lattice/ImplicationalSystem.java
		+ Rename & Update other classes
		+ Check Style
	+ test/lattice/ImplicationSystemTest.java

2014-03-09 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/lattice/ClosureSystem.java
	* src/lattice/ClosureSystem.iuml
	* src/lattice/BijectiveComponents.iuml
		+ Check style for ClosureSystem
		+ Add uml graph for ClosureSystem

2014-03-09 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/lattice/Context.java
	* src/lattice/Context.iuml
		+ Check style for Context
		+ Add uml graph for Context

2014-03-09 Christophe Demko <chdemko@gmail.com>
	* src/lattice/ArrowRelation.java
	* src/lattice/ArrowRelation.iuml
		+ Add uml graph for ArrowRelation

2014-03-09 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Concept.java
	* src/lattice/Concept.iuml
		+ Add uml graph for Concept

2014-03-08 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* doc/contribute/README.md
	* doc/contribute/title
	* doc/contribute/markdown.css
	* doc/tutorial/introduction.md
	* doc/tutorial/title
	* utility/initiate-publish.sh
		^ Reorganize contribute folder
		+ Add start of a tutorial

2014-03-07 Christophe Demko <chdemko@gmail.com>
	* .travis.yml
	* doc/
	* build.xml
	* utility/initiate-publish.sh